--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="lightron.royaletea.fr.lightron">
 
-    <uses-permission android:name="android.permission.SEND_SMS"/>
-    <uses-permission android:name="Manifest.permission.VIBRATE"/>
-
+    <uses-permission android:name="android.permission.SEND_SMS" />
+    <uses-permission android:name="Manifest.permission.VIBRATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -14,7 +13,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,7 +20,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".PongActivity"></activity>
     </application>
 
 </manifest>
